--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,204 @@
-.App {
-  text-align: center;
-}
+body {
+        background-color: #141414 !important;
+        /* Netflix-like black background */
+        color: white !important;
+        /* Ensures text is visible */
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+    }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+ /* home */
+ .genre-title {
+     color: white;
+     font-size: 1.5rem;
+     margin-bottom: 10px;
+     padding-left: 20px;
+ }
+ .movies-container {
+     display: flex;
+     overflow-x: auto;
+     white-space: nowrap;
+     padding-left: 20px;
+     gap: 15px;
+     scroll-behavior: smooth;
+     padding-top: 20px;
+ }
+ .movies-container::-webkit-scrollbar {
+     display: none;
+ }
+ .movie-tile {
+     flex: 0 0 auto;
+     width: 200px;
+     height: 200px;
+     border-radius: 8px;
+     overflow: hidden;
+     transition: transform 0.3s ease-in-out;
+ }
+ .movie-tile img {
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+ }
+ .movie-tile:hover {
+     transform: scale(1.1);
+ }
+ .genre-title-movie-tile {
+     flex: 0 0 auto;
+     width: 90%;
+     height: 200px;
+     border-radius: 8px;
+     overflow: hidden;
+     transition: transform 0.3s ease-in-out;
+ }
+ .genre-title-movie-tile img {
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+ }
+ .genre-title-movie-tile:hover {
+     transform: scale(1.1);
+ }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+ .top-20-movie-tile {
+    flex: 0 0 auto;
+    width: 180px;
+    height: 300px;
+    border-radius: 8px;
+    overflow: hidden;
+    transition: transform 0.3s ease-in-out;
+    position: relative;
+    display: inline-block
+ }
+ .top-20-movie-tile:hover {
+     transform: scale(1.1);
+ }
+ .top-20-movie-tile img {
+    width: 100%;
+    height: 85%;
+    object-fit: cover;
+    border-radius: 8px;
+    background: #ddd;
+
+    -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 100%);
+    /* mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 100%); */
+ }
+
+  .top20-movies-container {
+      display: flex;
+      overflow-x: auto;
+      white-space: nowrap;
+      padding-left: 20px;
+      gap: 15px;
+      scroll-behavior: smooth;
+      padding-top: 20px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .top20-movies-container::-webkit-scrollbar {
+      display: none;
   }
-  to {
-    transform: rotate(360deg);
+  .top10-text {
+    position: absolute;
+    top: 45%;
+    left: 70%;
+    font-size: 100px;
   }
+  .top20-text {
+    position: absolute;
+    top: 45%;
+    left: 40%;
+    font-size: 100px;
+  }
+ 
+
+
+
+
+
+/* Custom Navbar Styling */
+.navbar-brand {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+.navbar-nav .nav-item {
+    margin-right: 15px;
+}
+.navbar-nav .nav-link {
+    color: white !important;
+    font-size: 1rem;
+}
+.navbar-nav .nav-link:hover {
+    color: #f8c471 !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* modal */
+.modal_background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+.modal_white_section {
+    background: rgb(44, 42, 42);
+    padding: 20px;
+    border-radius: 8px;
+    width: 80%;
+    max-height: 90vh;
+    overflow-y: auto;
+    text-align: center;
+}
+.modal_wrapper {
+    width: 100%;
+}
+.modal_img {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    border-radius: 8px;
+    object-fit: contain;
+    margin: 0 auto;
+}
+.modal_text {
+    text-align: left;
+    font-size: 1rem;
+    text-wrap: wrap;
+}
+.modal_details {
+    text-align: left;
+    font-size: 1rem;
+   
+}
+.modal_buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+.bookmark_alert {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: green;
+    color: white;
+    padding: 15px;
+    border-radius: 5px;
+    font-size: 16px;
+    text-align: center;
+    z-index: 1100;
 }
